# enfold

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: ACTIVATION_CHECKLIST.md  COUNCIL_SYNTHESIS.md  IMPLEMENTATION_PLAN.md  MCP_PROXY.md  SECOND_BRAIN_SPEC.md  SERVER_DEPLOYMENT.md  STAGING_ACTIVATION.md
enfold/: __init__.py  backfill_legacy_superseded.py  backup.py  backup_rehearsal.py  client.py  cluster_merge.py  context.py  core_store.py  daemon.py  embed_store.py  embedding_jobs.py  embeddings.py  erasure.py  explain.py  extract_queue.py  extraction_enqueue.py  extraction_processor.py  extraction_worker.py  hermes_adapter.py  host_extractor.py  hybrid_retrieval.py  llm_extract.py  mcp_launcher.py  mcp_provider.py  mcp_proxy.py  mcp_server.py  mcp_stdio.py  ollama_artifact.py  ollama_extractor_child.py  ops.py  plugin.yaml  policy.py  projections.py  protocol.py  provenance.py  read_pool.py  reflection.py  rehearsal.py  retrieval_plus.py  schema.py  (+7 more)
holographic_plus/: __init__.py  backfill_legacy_superseded.py  cluster_merge.py  embed_store.py  embeddings.py  explain.py  extract_queue.py  llm_extract.py  mcp_provider.py  mcp_server.py  plugin.yaml  retrieval_plus.py  temporal.py
memory_eval/: README.md  __init__.py  autotune.py  baseline.py  cases.py  context_arena.py  daemon_arena.py  metrics.py  personal_arena.py  public_arena.py  runner.py  schema_checks.py  sqlite_utils.py
tests/: _concurrent_writer_worker.py  conftest.py  eval.py  fake_hermes.py  test_backfill_legacy_superseded.py  test_backup.py  test_backup_hardening.py  (+76 more)
(+7 files in other folders)
